mekf: more updates to the note

--- a/docs/typst/bibliography.bib
+++ b/docs/typst/bibliography.bib
@@ -25,3 +25,16 @@
   year        =  2013,
   url         = "https://apps.dtic.mil/sti/pdfs/ADA588831.pdf"
 }
+
+
+@ARTICLE{Sola2017-cy,
+  title         = "{Quaternion kinematics for the error-state Kalman filter}",
+  author        = "Sol{\`a}, Joan",
+  month         =  nov,
+  year          =  2017,
+  url           = "http://arxiv.org/abs/1711.02508",
+  archivePrefix = "arXiv",
+  eprint        = "1711.02508",
+  primaryClass  = "cs.RO",
+  arxivid       = "1711.02508"
+}
